--- a/discussion.tex
+++ b/discussion.tex
@@ -21,11 +21,11 @@ The quote from Richard Stallman in Section~\ref{subsec:defining-open-source} men
 
 For one, the overwhelming majority of open source coders on online communities are male, young, and white \citep{ghosh2002free}. A survey of 100k users from StackOverflow,\footnote{\href{https://stackoverflow.com/}{https://stackoverflow.com/}. \last{May~2}} a large language-agnostic forum for support and technical questions, found that this has changed little since in the past fifteen years, with 92.9\% of the users being male and 75\% of them white.\footnote{\href{https://insights.stackoverflow.com/survey/2018/}{https://insights.stackoverflow.com/survey/2018/}. \last{May~2}} Open source is disproportionally skewed towards already advantaged groups.
 
-The incentives around open source contributions are also changeable, and while paid workers are more likely to contribute in the long run, users who contribute to code because of the value of the code to them are less likely to stay in the community for long periods of time \citep{roberts2006understanding, shah2006motivation}. Ultimately, it is hobbyists who end up working on code the longest, after the initial value to them has worn off \citep{shah2006motivation}. This has implications for low resource languages; is open source the best vehicle for developing language software, which may have long runways? On another note, is it ethical to implement a system where there is high burnout rate for developers who need it, when it may make more sense to find ways to fund direct work for a small core of dedicated developers?
+The incentives around open source contributions are also changeable, and while paid workers are more likely to contribute in the long run, users who contribute to code because of the value of the code to them are less likely to stay in the community for long periods of time \citep{roberts2006understanding, shah2006motivation}. Ultimately, it is hobbyists who end up working on code the longest, after the initial value to them has worn off \citep{shah2006motivation}. This has implications for low resource languages; is open source the best vehicle for developing language software, which may require large allocations of time and funding? On another note, is it ethical to implement a system where there is high burnout rate for developers who need it, when it may make more sense to find ways to fund direct work for a small core of dedicated developers?
 
 To make this issue clearer, consider the position of a linguist encouraging language activists to build a localised wikipedia. Encouraging wikipedia contributions amounts to encouraging users to invest time which they may not be in an economically advantaged position to spend, as speakers of low resource languages are overwhelmingly not Western, educated, industrialised, rich, or from democratic countries - the WEIRD group described in \citet{henrich2010most}. Further, the system tends towards high initial attrition rates and with diminishing returns for the main investors. Whether encouraging someone to enter such a process is an ethical choice is left up to the reader; I certainly do not have an answer.
 
-These are a couple of small examples of where advocating open source is not a clearcut issue. This paper is not meant to provide a solid overview of all ethical issues; however, at least some of them are worth noting here as caveats. For low resource languages, open source coding presents a clear opportunity for allowing communities to work together, cross-linguistically and between stakeholders, with a minimum of friction caused by proprietary licensing. It is my opinion that any work which can be expedited or made redundant may be useful in a field where languages are dying at exorbitant rates.
+These are a couple of small examples of where advocating open source is not a clearcut issue. This paper is not meant to provide a solid overview of all ethical issues; however, at least some of them are worth noting here as caveats. For low resource languages, open source coding presents a clear opportunity for allowing communities to work together, cross-linguistically and between stakeholders, with a minimum of friction caused by proprietary licensing. It is my opinion that any extra work to save languages and help language comunities which can be expedited or made redundant should be. Given that languages are dying globally at exorbitant rates, we cannot afford not to work as fast as we can.
 
 
 \subsection{Data and privacy}
@@ -39,13 +39,13 @@ One issue which is unresolved is that of aligning incentives for researchers to 
 
 These principles can be extended to software, which historically is not cited academically (as in this paper, where a footnote to a website has for the most part sufficed). There is ongoing work in the sciences (if not in linguistics directly) on enforcing software citations \citep{DBLP:journals/corr/KatzCWHVHSJCCVL15, katz2016report}. The previously mentioned {\it Journal of Open Source Software} \citep{smith2018journal} is a good example of an effort to make code a citable object. To my knowledge, there has been no major effort linking linguistics corpora and the related tools under the same citable object. More research and collaboration here would be welcome.
 
-Another facet regarding sharing data revolves around the sensitive nature of linguistic data itself, and ethical issues surrounding researchers or corpus architects. Participants who initially provide linguistic data may require permanent access to that data, and may wish to restrict access to others - for instance, in the case where stories or data are viewed as part of their cultural heritage, and which they view as private to their culture. Linguists taking data need to then document the wishes of the participants; and convey this on to data providers, to ensure that archivists respect the participants and the linguists wishes. Data which is gathered electronically {\it en masse} can  also lead to difficulties, as not all participants wishes can be easily taken into account (for instance, with large databases made by web crawlers). This milieu of needs and obligations can lead to licensing and access complications, especially with regard to LRLs. For instance, Chiarcos raised a question on the Open Linguistics mailing list\footnote{\href{https://lists.okfn.org/mailman/listinfo/open-linguistics}{https://lists.okfn.org/mailman/listinfo/open-linguistics}. \last{April~27}} regarding the legality of sharing Bible translations under EU and US law, and whether or not reuse of this data would constitute copyright violations for researchers who use the data.\footnote{\href{https://lists.okfn.org/pipermail/open-linguistics/2017-April/001359.html}{https://lists.okfn.org/pipermail/open-linguistics/2017-April/001359.html}. \last{April~27}} (There was no clear resolution in this case). There is a host of active research and discussion around this topic; \citet{liberman2000legal, newman2007copyright, rice2006ethical, austin2010communities, o2010ethical, cushman2013wampum} are recommended for further reading.
+Another facet regarding sharing data revolves around the sensitive nature of linguistic data itself, and ethical issues surrounding researchers or corpus architects. Participants who initially provide linguistic data may require permanent access to that data, and may wish to restrict access to others - for instance, in the case where stories or data are viewed as part of their cultural heritage, and which they view as private to their culture. Linguists taking data need to then document the wishes of the participants; and convey this on to data providers, to ensure that archivists respect the participants' and the linguists' wishes. Data which are gathered electronically {\it en masse} can  also lead to difficulties, as not all participants' wishes can be easily taken into account (for instance, with large databases made by web crawlers). This milieu of needs and obligations can lead to licensing and access complications, especially with regard to LRLs. For instance, Chiarcos raised a question on the Open Linguistics mailing list\footnote{\href{https://lists.okfn.org/mailman/listinfo/open-linguistics}{https://lists.okfn.org/mailman/listinfo/open-linguistics}. \last{April~27}} regarding the legality of sharing Bible translations under EU and US law, and whether or not reuse of this data would constitute copyright violations for researchers who use the data.\footnote{\href{https://lists.okfn.org/pipermail/open-linguistics/2017-April/001359.html}{https://lists.okfn.org/pipermail/open-linguistics/2017-April/001359.html}. \last{April~27}} (There was no clear resolution in this case). There is a host of active research and discussion around this topic; \citet{liberman2000legal, newman2007copyright, rice2006ethical, austin2010communities, o2010ethical, cushman2013wampum} are recommended for further reading.
 
-Sometimes, privacy revolves less around the users or the language communities, and more around researchers not wishing to open source their code until they are done developing their project, or until a grant ends, or until they are safe that they wo not be scooped by other researchers. Other factors include the brevity of some academic funding cycles, concerns about scope, or lack of education regarding how open source works. However, the landscape is changing slowly. For instance, in a paper describing a tool for sharing interlinearised and lexical data in different formats, \citet[132]{kaufman2018kratylos} note that "Kratylos will be made open-source and accessible to the public through a GitHub repository at the end of the current grant period. Kratylos is built entirely from open- source software itself and transcodes proprietary media formats into the open-source codecs Ogg Vorbis (for audio) and Ogg Theora (for video)."\footnote{To date, this has not been open sourced. \href{http://elalliance.org/programs/documentation/kratylos/}{\nolinkurl{http://elalliance.org/programs/documentation/kratylos/}}. \last{April~27}} This is particularly insightful, as it shows that open source archives can arise out of initial closed-source development. Open source is not always a static state for code; and it is becoming more common to see open source code for LRL NLP as researchers become more familiar with current trends in software development.
+Sometimes, privacy revolves less around the users or the language communities, and more around researchers not wishing to open source their code until they are done developing their project, or until a grant ends, or until they are safe that they will not be scooped by other researchers. Other factors include the brevity of some academic funding cycles, concerns about scope, or lack of education regarding how open source works. However, the landscape is changing slowly. For instance, in a paper describing a tool for sharing interlinearised and lexical data in different formats, \citet[132]{kaufman2018kratylos} note that "Kratylos will be made open-source and accessible to the public through a GitHub repository at the end of the current grant period. Kratylos is built entirely from open- source software itself and transcodes proprietary media formats into the open-source codecs Ogg Vorbis (for audio) and Ogg Theora (for video)."\footnote{To date, this has not been open sourced. \href{http://elalliance.org/programs/documentation/kratylos/}{\nolinkurl{http://elalliance.org/programs/documentation/kratylos/}}. \last{April~27}} This is particularly insightful, as it shows that open source archives can arise out of initial closed-source development. Open source is not always a static state for code; and it is becoming more common to see open source code for LRL NLP as researchers become more familiar with current trends in software development.
 
 \subsection{Open Source as a tool for saving languages}
 
-So: how can the open source methodology for software development low resource languages?
+So: how can the open source methodology for software development help low resource languages?
 
 The most blatant advantage of open source is that any code developed is in the public domain; anyone can access and use it. This frees up communities to work on their own code, and leads to language developers being able to improve their languages' tech without searching for large amounts of funding, or depending on collaboration with universities or enterprises which may have different incentives and timelines. By contributing to the digital commons, it is possible to raise the quality of code for everyone, and a rising tide lifts all boats.
 
