--- a/low-resource-languages.tex
+++ b/low-resource-languages.tex
@@ -200,8 +200,7 @@ However, the digital sphere can best be thought of schematically as a new domain
 \subsubsection{Finding resources on the web}
 \label{subsec:finding-resources}
 
-Before defining metrics, a short note on how to find out if a language has any digital content on the web. In addition to using a search engine to look for content that coincides with the language's name, and hoping that it happens to be written in the target language, there are several resources which can be used to judge the amount of corpora for a language on the web. The main resource for low resource languages is almost certainly the Cr\'ubad\'an project, developed by \citet{scannell2007crubadan}.\footnote{\href{http://crubadan.org/}{http://crubadan.org/}. \last{May~2}} This is a massive crawler which looks for documents with trigram frequencies for particular languages by checking against a seed corpus for under resourced languages developed from Wikipedia, the Jehovah's Witness translations, and translations of the Universal Declaration of Human Rights (UDHR). % TODO Cite
- It is often the only corpus for a low resource language on the web, as is the case with Naskapi (see Section~\ref{sec:naskapi}). A similar project, Indigenous Tweets,\footnote{\href{http://indigenoustweets.com/}{http://indigenoustweets.com/}. \last{May~3}} collects tweets from speakers of LRLs \citep{scannell2013endangered}.
+Before defining metrics, a short note on how to find out if a language has any digital content on the web. In addition to using a search engine to look for content that coincides with the language's name, and hoping that it happens to be written in the target language, there are several resources which can be used to judge the amount of corpora for a language on the web. The main resource for low resource languages is almost certainly the Cr\'ubad\'an project, developed by \citet{scannell2007crubadan}.\footnote{\href{http://crubadan.org/}{http://crubadan.org/}. \last{May~2}} This is a massive crawler which looks for documents with trigram frequencies for particular languages by checking against a seed corpus for under resourced languages developed from Wikipedia, the Jehovah's Witness translations, and translations of the Universal Declaration of Human Rights (UDHR) \citep{assembly1948universal}. It is often the only corpus for a low resource language on the web, as is the case with Naskapi (see Section~\ref{sec:naskapi}). A similar project, Indigenous Tweets,\footnote{\href{http://indigenoustweets.com/}{http://indigenoustweets.com/}. \last{May~3}} collects tweets from speakers of LRLs \citep{scannell2013endangered}.
 
 Often, a translated Bible is the next best place to look for digital content. Biblical translations are so common as a first resource that there is a body of research that uses partial or full translations of the Bible for training natural language processing (NLP) systems as a result \citep{chew2006evaluation, agic2015if}. When finding the Bible or UNDR in a target language is difficult, the next best bet is to look for resources in large aggregators of linguistic data. There are large projects which hold resources for linguists - for more, see Section~\ref{subsec:resource-aggregators}. However, these resources are not always directly reflective of a language's digital presence, but rather of the scope of resources available to computational linguists and natural language processing experts. They satisfy a different need, and tools such as Perseus\footnote{\href{http://www.perseus.tufts.edu/hopper/}{http://www.perseus.tufts.edu/hopper/}. \last{May~2}} might show that there is work done on Latin, but it does not mean that there is a large Latin-speaking community that could be measured. Instead, organic corpora - such as collected from the web by Cr\'ubad\'an - are most likely the best ways of measuring a language's foothold on the web.
 
@@ -216,15 +215,20 @@ This may be an overstatement; while Wikipedia presence may be heavily correlated
 \subsubsection{Metrics for digital presence}
 \label{sec:metrics-for-digital-presence}
 
-% TODO It would be really helpful to add some sort of graphic or table for the digital presence metrics, perhaps at the end of the section, summarizing the scales of Kornai, Gibson, and Soria (currently you have just Soria)
-
 \paragraph{\citepos{kornai2013digital} metric}
 
-\citet{kornai2013digital} outlined the first major metric for describing digital presence for a language. These metrics are needed because normal metrics are not directly transferable to digital presence, as digital linguistic data is decoupled from speakers (it can survive beyond them), and because the digital domain is only one of a variety of domains for language usage. He divided languages into four possible categories: Thriving, Vital, Heritage, and Still. These can be thought of as a gradient, with digital ascent being the process of a language moving up the scale. Only 16 languages would be considered Thriving, all of which would be rated at 1 or higher on the EGIDS scale. Vital languages are those which may be in danger in the next hundred years, or show few signs of digital ascent - but they have a large population of speakers and at least some resources, such as a Bible or the UNDR; Heritage languages are dead or historic languages such as Latin which have large online presences that do not relate directly to a living language community; and Still languages show little to no presence on the web at all (although note that this does not mean that they are endangered or moribund outside of the web.)
+\citet{kornai2013digital} outlined the first major metric for describing digital presence for a language. These metrics are needed because normal metrics are not directly transferable to digital presence, as digital linguistic data is decoupled from speakers (it can survive beyond them), and because the digital domain is only one of a variety of domains for language usage. He divided languages into four possible categories: Thriving, Vital, Heritage, and Still. These can be thought of as a gradient, with digital ascent being the process of a language moving up the scale. Only 16 languages would be considered Thriving, all of which would be rated at 1 or higher on the EGIDS scale. Vital languages are those which may be in danger in the next hundred years, or show few signs of digital ascent - but they have a large population of speakers and at least some resources, such as a Bible or the UNDR; Heritage languages are dead or historic languages such as Latin which have large online presences that do not relate directly to a living language community; and Still languages show little to no presence on the web at all (although note that this does not mean that they are endangered or moribund outside of the web.) A table from \citet{kornai2013digital} for the languages sampled is provided in Figure~\ref{fig:kornai}.
 
-\citet{kornai2013digital}  looks at five confluent factors; demographics, prestige, the identity function of the language, the level of software support, and Wikipedia presence for a language. Demographics and community size can be gathered by doing a quantitative analysis of all public data available in a language on the web, and by using this data size as a proxy for the amount of speakers of a language using the digital space. This has obvious limits, which Kornai points out, in that the data may not accurately reflect the amount of users, in that it is limited to public data accessible by researchers, and in that it does not give an accurate representation of passive consumption of multilingual data. It would be worth adding that this also does not give an accurate count of multilingual usage of a language. Prestige is an obvious factor for digital ascent; when a language community views one language as more useful or relevant than another, it is more likely to create digital content in one than the other, regardless of social policies and to some extent speaker populations. Identity function marks whether speaking populations identify themselves with a language, and is used largely to weed out certain historical languages, like Latin and Classical Chinese, which have large corpora online but should not be considered in the same grouping as more vibrant, living languages.
+\citet{kornai2013digital} looks at five confluent factors; demographics, prestige, the identity function of the language, the level of software support, and Wikipedia presence for a language. Demographics and community size can be gathered by doing a quantitative analysis of all public data available in a language on the web, and by using this data size as a proxy for the amount of speakers of a language using the digital space. This has obvious limits, which Kornai points out, in that the data may not accurately reflect the amount of users, in that it is limited to public data accessible by researchers, and in that it does not give an accurate representation of passive consumption of multilingual data. It would be worth adding that this also does not give an accurate count of multilingual usage of a language. Prestige is an obvious factor for digital ascent; when a language community views one language as more useful or relevant than another, it is more likely to create digital content in one than the other, regardless of social policies and to some extent speaker populations. Identity function marks whether speaking populations identify themselves with a language, and is used largely to weed out certain historical languages, like Latin and Classical Chinese, which have large corpora online but should not be considered in the same grouping as more vibrant, living languages.
 
-Software support as a factor in digital presence could be identified with a variety of different metrics. Kornai lists various stages for a language on the road of digital ascent. First, localisation of internalisation (often expressed using the shorthand l10n or i18n, where the numbers refer to the length of the words) of the language script is the major milestone that separates languages which are ascending from still languages. While many scripts use the more common Roman, CJK (a shorthand for Chinese, Japanese, and Korean languages), Cyrillic, or Arabic alphabets, there are hundreds which do not, and these languages have specific Unicode considerations which need to be met for the language to be used adequately. The next step would be word-level tools, such as dictionaries, stemmers, and spellcheckers - all of which depend, at some point, on standardisation of the language. Finally, sentence level tools such as automatic translators can be used. Regarding support, the question of a language's status is straightforward: is there language support for an operating system provided by Apple or Microsoft? If so, then it is likely that the language is thriving or vital. If not, there is almost zero chance of it being so. Kornai also used the Cr\'ubad\'an Project, UHDR and biblical presence, and presence on Omniglot and OLAC (see Section~\ref{subsec:resource-aggregators}).
+\begin{figure}
+ \centering
+ \includegraphics[width=1\textwidth]{img/kornai.png}
+ \caption{Summary characteristics of language by class \citep[9]{kornai2013digital}}
+ \label{fig:kornai}
+\end{figure}
+
+Software support as a factor in digital presence could be identified with a variety of different metrics. Kornai lists various stages for a language on the road of digital ascent. First, localisation of internalisation (often expressed using the shorthand l10n or i18n, where the numbers refer to the length of the words) of the language script is the major milestone that separates languages which are ascending from still languages. While many scripts use the more common Roman, CJK (a shorthand for Chinese, Japanese, and Korean languages), Cyrillic, or Arabic alphabets, there are hundreds which do not, and these languages have specific Unicode considerations which need to be met for the language to be used adequately. The next step would be word-level tools, such as dictionaries, stemmers, and spellcheckers - all of which depend, at some point, on standardisation of the language. Finally, sentence level tools such as automatic translators can be used. Regarding support, the question of a language's status is straightforward: is there language support for an operating system provided by Apple or Microsoft? If so, then it is likely that the language is thriving or vital. If not, there is almost zero chance of it being so. Kornai also used the Cr\'ubad\'an Project, UDHR and biblical presence, and presence on Omniglot and OLAC (see Section~\ref{subsec:resource-aggregators}).
 
 The best indicator of a language's digital presence was their EGIDS rating. "The next best set of features indicated the quality of the wikipedia, followed by the number of L1 speakers, the size of the Cr\'ubad\'an crawl, the existence of FLOSS spellcheckers, and the number of online texts listed in OLAC." \citep[6]{kornai2013digital} Overall, only 5\% of the world's languages were seen as digitally ascending; like most results from this field, an increasingly dire statistic. As \citet[10]{kornai2013digital} writes:
 
@@ -274,9 +278,9 @@ Each of these metrics suffers from growing pains. For instance, there is no metr
 
 \subsection{Summary}
 
-Above, I've covered many of the terms and metrics used to compare different languages. As was clear in the definitions section, language classification is not always an easy task. Different starting points influence how one views a language, and each language is a multifaceted, complex system. Even if one narrows down the intent to merely talking about minority, low resource, natural, living, endangered languages, there is still a lot of wiggle room for saying exactly how a language is faring on the global stage and what steps should be taken by linguists and language developers to help the language stay vibrant. Each popular metric is different, and some of them fundamentally disagree on how to measure a language's vitality. There are two main camps: the quantifiers (EGIDS, LEI) who want to give a specific number to a language to determine language endangerment, and the qualifiers (UNESCO) who are willing to let complexity be a part of the classification of language vitality. 
+Above, I have covered many of the terms and metrics used to compare different languages. As was clear in the definitions section, language classification is not always an easy task. Different starting points influence how one views a language, and each language is a multifaceted, complex system. Even if one narrows down the intent to merely talking about minority, low resource, natural, living, endangered languages, there is still a lot of wiggle room for saying exactly how a language is faring on the global stage and what steps should be taken by linguists and language developers to help the language stay vibrant. Each popular metric is different, and some of them fundamentally disagree on how to measure a language's vitality. There are two main camps: the quantifiers (EGIDS, LEI) who want to give a specific number to a language to determine language endangerment, and the qualifiers (UNESCO) who are willing to let complexity be a part of the classification of language vitality. 
 
-The situation gets more complex for digital presence - the state of a language on the internet (or simply electronically); I covered three different proposals for saying how far a language has ascended into the digital sphere. Like GIDS, \citet{kornai2013digital} set the stage for how to rank a language in the digital sphere; the following metrics are largely derivative. With that in mind, it's worth asking what sort of resources exist for languages. I cover this in the next section.
+The situation gets more complex for digital presence - the state of a language on the internet (or simply electronically); I covered three different proposals for saying how far a language has ascended into the digital sphere. Like GIDS, \citet{kornai2013digital} set the stage for how to rank a language in the digital sphere; the following metrics are largely derivative. With that in mind, it is worth asking what sort of resources exist for languages. I cover this in the next section.
 
 % Chapter needs some sort of conclusion, focusing in and summarizing the most important points
 
