--- a/references.bib
+++ b/references.bib
@@ -7,6 +7,13 @@
   note={\last{April~24}}
 }
 
+@article{assembly1948universal,
+  title={Universal declaration of human rights},
+  author={Assembly, UN General},
+  journal={UN General Assembly},
+  year={1948}
+}
+
 @inproceedings{bird2014aikuma,
   title={Aikuma: A mobile app for collaborative language documentation},
   author={Bird, Steven and Hanke, Florian R and Adams, Oliver and Lee, Haejoong},
@@ -186,40 +193,6 @@
   year={1997},
   publisher={Institute of Electrical and Electronics Engineers (IEEE)}
 }
-
-
-@InProceedings{LittEdulearn,
-  author  = {Richard Littauer and Antonia Scheidel and Marc Schulder and Sibel Ciddi},
-  title   = {Crowd Sourcing the Classroom: Interactive Applications in Higher Learning},
-  booktitle = {Proceedings of the 4th International Conference on Education and New Learning Technologies (EDULEARN12)},
-  month   = {July},
-  year  = {2012},
-  pages   = {1473-1481},
-  publisher = {International Association of Technology, Education and Development (IATED)},
-  editor  = {L. G\'omez Chova, L. and I. Candel Torres and A. L\'opez Mart\'inez},
-  address = {Barcelona, Spain},
-  ibsn  = {978-84-695-3491-5},
-}
-
-
-
-@article{wiggins2013data,
-  title={Data management guide for public participation in scientific research},
-  author={Wiggins, Andrea and Bonney, Rick and Graham, Eric and Henderson, Sandra and Kelling, Steve and LeBuhn, Gretchen and Litauer, R and Lots, K and Michener, W and Newman, G},
-  journal={DataOne Working Group},
-  pages={1--41},
-  year={2013}
-}
-
-@inproceedings{LittIDCC,
-	Author  = {Richard Littauer and Karthik Ram and Bertram Lud{\"a}scher and William Michener and Rebecca Koskela},
-	booktitle = {7th International Digital Curation Conference Proceedings},
-	Month   = {December},
-	Title   = {Trends in Use of Scientific Workflows: Insights from a Public Repository and Guidelines for Best Practices.},
-	Year  = {2011}
-}
-
-
 
 @article{newman2007copyright,
   title={Copyright essentials for linguists},
@@ -416,16 +389,6 @@ publisher={Blackwell}
   pages={224-255},
   journal={Language Documentation and Conservation}
 }
-
-@article{labov2012journal,
-  title={Journal of Linguistic Geography},
-  author={Labov, William and Preston, Dennis and Britain, David and others},
-  journal={Journal of Linguistic Geography},
-  volume={1},
-  number={1},
-  year={2012}
-}
-
 
 @book{labov2005atlas,
   title={The atlas of {North American English}: Phonetics, phonology and sound change},
