--- a/resources.tex
+++ b/resources.tex
@@ -20,7 +20,7 @@ There are other types of corpora. For instance, a bilingual or multilingual corp
 
 Depending on the level of annotation and tooling done on a corpus, it often makes sense to include the code which cleaned the corpus in some way with the corpus itself. Tooling is a generic term that is used here to mean one-off scripts or commands which were run on the data to prepare or clean it; this is in opposition to more extensive NLP code, which can often be run many times or which runs more complicated functions. For example, if a database has had certain words removed - for instance, all words in a database which contain a grapheme that is known not to exist in the target language but in a contact language - this command may only have been run once using a trivial regex. This may not be expedient to bundle with the corpus. However, if there is extensive cleaning which has occurred, such as many such operations, it would make sense to make a script which performs them all at once; in this case, this could should be bundled with the data to help future language researchers access and understand the provenance of the data. 
 
-Using a corpus may also require using a certain program. For instance, \citet{kempton2009finding} describe an automatic allophone induction tool using the TIMIT corpus \citep{garofolo1993darpa}, and they go into some depth discussing the tools needed to parse the well-known corpus, such as the SIL Phonology Assistant,\footnote{\href{https://software.sil.org/phonologyassistant/}{https://software.sil.org/phonologyassistant/}. \last{May~2} (Also an open source project on GitHub, at \href{https://github.com/sillsdev/phonology-assistant}{https://github.com/sillsdev/phonology-assistant}. \last{May~2}), although it wasn't open source when originally reviewed in 2008 \citep{dingemanse2008review}} or the SRILM extensible language modelling toolkit \citep{stolcke2002srilm}. However, unless the code is in some way bundled or its development is well-funded, a paper's combined tooling or workflow often isn't available explicitly.
+Using a corpus may also require using a certain program. For instance, \citet{kempton2009finding} describe an automatic allophone induction tool using the TIMIT corpus \citep{garofolo1993darpa}, and they go into some depth discussing the tools needed to parse the well-known corpus, such as the SIL Phonology Assistant,\footnote{\href{https://software.sil.org/phonologyassistant/}{https://software.sil.org/phonologyassistant/}. \last{May~2} (Also an open source project on GitHub, at \href{https://github.com/sillsdev/phonology-assistant}{https://github.com/sillsdev/phonology-assistant}. \last{May~2}), although it was not open source when originally reviewed in 2008 \citep{dingemanse2008review}} or the SRILM extensible language modelling toolkit \citep{stolcke2002srilm}. However, unless the code is in some way bundled or its development is well-funded, a paper's combined tooling or workflow often is not available explicitly.
 
 \subsubsection{Code}
 \label{sec:resources-code}
@@ -79,7 +79,7 @@ The use of the word `kit' is informative, as there is  pre\"{e}xisting literatur
 
 \citet{krauwer2003basic} has a comprehensive matrix in the appendix outlining technology that would be needed to provide a BLARK for Dutch, as outlined in a workshop documented in \citet{binnenpoorte2002towards}. In another paper, \citet{maegaard2006blark} under NEMLAR (Network  for  Euro-Mediterranean  LAnguage  Resources) outlined the specific language resource needs for Arabic in a BLARK table, noting the importance of certain modules for better language coverage. Both of the BLARK grids for Arabic provided in that paper are included here, in Figures~\ref{fig:blark1} and \ref{fig:blark2}, as they usefully show not only the state of HLT resources which were desired for Arabic at the time, but also the categories thought sufficient for cataloguing resources that might be expected in high resource languages. They also point out how both written and spoken language tools need to be developed, and cannot be considered entirely in isolation. 
 
-The rows in BLARK are applications which can be built using the corpora represented in the columns. The categories for applications - `prosody prediction', `alignment', `shallow parsing', and so on - are all terms which refer to a suite of resources that each reflect hundreds of papers from within the computational linguistics community, which Section~\ref{sec:resources-code} briefly explicated. BLARK grids don't necessarily show the state of the field as it is, but rather a list of resources which could most usefully be developed: "The degree to which the modules are needed is marked by plus signs: `+++' means `essential', `++' means `very important' and `+' means `important'." \citep[774]{maegaard2006blark}
+The rows in BLARK are applications which can be built using the corpora represented in the columns. The categories for applications - `prosody prediction', `alignment', `shallow parsing', and so on - are all terms which refer to a suite of resources that each reflect hundreds of papers from within the computational linguistics community, which Section~\ref{sec:resources-code} briefly explicated. BLARK grids do not necessarily show the state of the field as it is, but rather a list of resources which could most usefully be developed: "The degree to which the modules are needed is marked by plus signs: `+++' means `essential', `++' means `very important' and `+' means `important'." \citep[774]{maegaard2006blark}
 
 \begin{figure}
  \centering
@@ -177,9 +177,6 @@ The Online Historical Encyclopaedia of Programming Languages's website\footnote{
 That English is needed to code means that any coder wishing to develop resources in their native language will most likely need to use English or other major languages for the vast majority of the work. While solving this problem is out of scope here, it is worth mentioning this aspect of language resource development. There is active work in this field, both for high and for low resource languages; for instance, Lassi\footnote{\href{https://github.com/julienmalard/Lassi}{https://github.com/julienmalard/Lassi}. \last{May~3}} is a tool in development which allows Kaqchikel speakers to code entirely in their own language, by automatically translating code from one language to another. Any language could become supported, so this is an exciting possible area of future work.
 
 \subsection{Summary}
-
-% You need something more of a conclusion for this chapter -- right now it's just " there are a lot of issues and I only have space to talk about some of them " -- what are the takeaway messages from this chapter?
-
 Above, I gave a brief overview of what exactly is meant by `language resources' in this thesis. As a term, this means any resource which either holds language data (a corpus) or which acts on a corpus (code, a computational resource, or a tool). Often, these go together, and there are many different types of each. I briefly listed certain types of computational resources which are common when dealing with low resource languages in Section~\ref{sec:resources-code}. I also listed various repositories online where language researchers can find language resources or information for their languages; this is especially important as background information for Chapter~\ref{sec:lrl-code}, where I go into detail about how to glean resources from these data providers, and also in Chapter~\ref{sec:case-studies} where I use some of them to examine the state of the field for Naskapi and Gaelic.
 
-In Section~\ref{subsec:blark-and-lre-maps}, I discussed two efforts to figure out what resources are useful for low resource languages, and in Section~\ref{subsec:who-makes-resources} who makes resources for them. Understanding how different stakeholders - linguists, language developers, language communities, computational linguists, military and government organisations, and so on - influence the building of dozens of different types of tools for the world's thousands of languages is important, as any recommendations or progress regarding how to develop language resources in the future depends upon a knowledge of the existing ecosystem. Aspects of language resource development such as funding and allocation of resources (which tool should be built next?) are integral parts of language development. Here, I've given a brief summary which informs the next few chapters. In the next chapter, I discuss open source as an working methodology that may expedite and improve the language resource development process. 
+In Section~\ref{subsec:blark-and-lre-maps}, I discussed two efforts to figure out what resources are useful for low resource languages, and in Section~\ref{subsec:who-makes-resources} who makes resources for them. Understanding how different stakeholders - linguists, language developers, language communities, computational linguists, military and government organisations, and so on - influence the building of dozens of different types of tools for the world's thousands of languages is important, as any recommendations or progress regarding how to develop language resources in the future depends upon a knowledge of the existing ecosystem. Aspects of language resource development such as funding and allocation of resources (which tool should be built next?) are integral parts of language development. Here, I have given a brief summary which informs the next few chapters. In the next chapter, I discuss open source as an working methodology that may expedite and improve the language resource development process. 
