--- a/future-work.tex
+++ b/future-work.tex
@@ -9,13 +9,13 @@ This thesis, a cursory look at open source and low resource languages, has highl
 The LRE Map resource is fantastic in that it has an order of magnitude more resources listed than other aggregators, like OLAC. With 2000 resources, it should be a port of call for linguists and researchers working on LRLs. Similarly, the database provided by Kornai's lab to measure language vitality has great potential, as it examines many aspects of digital language presence that are not mentioned in the other large typological or reference databases. However, both fall short in a very important way; they do not link to the resources they mention. Ideally, they should be portals for language developers hoping to work on their specific languages. Extending these portals - or, as a last resort, making a new one - would be beneficial to language communities hoping to increase the scope of their language's digital presence. This is an area of ripe future research; the low-resource-languages list presented in Section~\ref{sec:solutions} is only a hint at might be possible with properly aggregated metadata.
 
 \subsection{Rethinking metrics for digital presence}
-\citet{kornai2013digital} was a seminal, groundbreaking analysis of language presence on the web. \citet{gibson2016assessing} was a good extension. \citet{soria2017digital} extends these even further, to better approximate digital language vitality. However, it excluded heritage languages, and does not judge specific languages to test its applicability. As this was a draft to elicit feedback (Soria, personal communication), they can be forgiven for this; but this is then, clearly, an area of future research. As I pointed out, there is no scale as of yet that ranks English on its own ranking, either, where it ought to be given its global digital dominance. And, finally, there is not a good metric that combines quantitative and qualitative measurements together, although \citepos{kornai2015new} inclusion of SIL approaches this. While this would be difficult, I think that it could be possible.
+\citet{kornai2013digital} was a seminal, groundbreaking analysis of language presence on the web. \citet{gibson2016assessing} was a good extension. \citet{soria2017digital} extends these even further, to better approximate digital language vitality. However, it excluded heritage languages, and does not judge specific languages to test its applicability. As I pointed out, there is no scale as of yet that ranks English on its own ranking, either, where it ought to be given its global digital dominance. And, finally, there is no good metric that combines quantitative and qualitative measurements together, although \citepos{kornai2015new} inclusion of SIL's ranking of language vitality approaches this, as it uses EGIDS judgements from linguists for the most part embedded in their respective language communtiies. While making a mixed metric would be difficult, I think that it could be possible.
 
-Another interesting avenue of research would be to analyse metrics for digital presence for constructed languages. While scoping a metric is understandable, excluding entire communities because they are centred around \textit{a priori} languages seems, to me, to be rash, especially as these languages often have a strong identify function for their speakers.
+Another interesting avenue of research would be to analyse metrics for digital presence for constructed languages. While scoping a metric is understandable, excluding entire communities because they are centred around \textit{a priori} languages seems, to me, to be rash, especially as these languages often have a strong identity function for their speakers.
 
 \subsection{Rethinking language diversity and typological relation}
 
-\citet{ginsburgh2011many} asked how many languages we really need; \citet{bender2010grand, bender2016linguistic} touched on the field of language typology being a resource for multilingual projection of language models and tooling. I was unable to find research on the number of languages which could functionality have multilingual NLP applied to them in the world. It ought to be possible to calculate a number of languages for which automatic hunspell dictionaries could be elicited; and then automatic POS taggers; and then automatic grammar models, and so on.
+\citet{ginsburgh2011many} asked how many languages we really need; \citet{bender2010grand, bender2016linguistic} touched on the field of language typology being a resource for multilingual projection of language models and tooling. I was unable to find research on the number of languages which could functionally have multilingual NLP applied to them in the world. It ought to be possible to calculate a number of languages for which automatic hunspell dictionaries could be elicited; and then automatic POS taggers; and then automatic grammar models, and so on.
 
 Put succinctly, if Irish morphological parsers can be applied to Gaelic, could they also be applied to Cornish? And if they can be applied to Cornish, then it might be possible to cluster all of the Goidelic languages in one grouping, such that the amount of languages which require language development could be thought of less as individual entities but as groupings of typological features which can multilingual NLP can be adapted for.
 
