--- a/open-source-for-lrls.tex
+++ b/open-source-for-lrls.tex
@@ -19,17 +19,17 @@ A discussion of these strategies and the implications of their findings is prese
 \subsection{Case study: Mapping linguistic co\"ordinates}
 \label{subsec:mapping}
 
-Choosing a specific HLT task and then trying to perform that task as adequately as possible is one strategy for figuring out how much open source code exists, and what that looks like. There are cases where using open source software is decidedly simple. For instance, if the goal is to build a POS tagger using two hours of annotation, you could use the {\tt low-resource-pos-tagging-2014} package developed as part of \citet{garrette2013real,garrette2013learning}, and available on GitHub\footnote{\href{https://github.com/dhgarrette/low-resource-pos-tagging-2014}{https://github.com/dhgarrette/low-resource-pos-tagging-2014}. \last{April~27}}, under an Apache open license, without any other considerations than downloading Java and learning a bit of Scala, both free and open source languages. But this is a very limited use case, as this package was built as part of two scientific papers studying this narrowly scoped problem.
+Choosing a specific HLT task and then trying to perform that task as adequately as possible is one strategy for figuring out how much open source code exists, and what that looks like. There are cases where using open source software is decidedly simple. For instance, if the goal is to build a POS tagger using two hours of annotation, you could use the {\tt low-resource-pos-tagging-2014} package developed as part of \citet{garrette2013real,garrette2013learning}, and available on GitHub,\footnote{\href{https://github.com/dhgarrette/low-resource-pos-tagging-2014}{https://github.com/dhgarrette/low-resource-pos-tagging-2014}. \last{April~27}} under an Apache open license, without any other considerations than downloading Java and learning a bit of Scala, both free and open source languages. But this is a very limited use case, as this package was built as part of two scientific papers studying this narrowly scoped problem.
 
 A more complex workflow will show the difficulties of using open source for low resource languages, and highlight what a research methodology might look like in depth. For example, suppose we were interested in making dialect maps using language co\"ordinates. This is an old research area in linguistics \citep{trudgill1983on,labov2005atlas}. Geolocationally-tagged language data has many useful applications. For instance, tagging tweets or text messages within a country can be used to understand dialects \citep{mubarak2014using}, or in crisis situations \citep{lewis2010haitian}. Geolocation can also be used to plot language relatedness \citep{littauer2012visualizing}.
 
-Another example where geolocation might be useful outside of research would be in l10n in the browser. For instance, a client normally specifies what languages they use through ISO 639 tags\footnote{\href{https://www.ietf.org/rfc/bcp/bcp47.txt}{https://www.ietf.org/rfc/bcp/bcp47.txt}. \last{April~27}}, which are set automatically when they install their browser. If the client's browser does not send an {\tt Accept-Language} header\footnote{\href{https://tools.ietf.org/html/rfc7231\#section-5.3.5}{https://tools.ietf.org/html/rfc7231\#section-5.3.5}. \last{April~27}} with this information in their requests to view a website, then the server may use the {\tt Navigator\-Language} object in JavaScript\footnote{\href{https://www.w3.org/TR/html51/webappapis.html\#language-preferences}{https://www.w3.org/TR/html51/webappapis.html\#language-preferences}. \last{April~27}} to query for the language of the browser user interface. However, the server can also ask the client's browser directly through the Geolocation API (for instance, on Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{April~27}}\footnote{\href{https://developer.mozilla.org/en-US/docs/Web/API/Geolocation/Using_geolocation}{https://developer.mozilla.org/en-US/docs/Web/API/Geolocation/Using\_geolocation}. \last{April~27}}) to supply the geolocation of users and extrapolate plausible languages for the client. Knowing where the user is likely to be, and what languages the user is likely to prefer using, could help with providing their native language automatically in the browser.
+Another example where geolocation might be useful outside of research would be in l10n in the browser. For instance, a client normally specifies what languages they use through ISO 639 tags,\footnote{\href{https://www.ietf.org/rfc/bcp/bcp47.txt}{https://www.ietf.org/rfc/bcp/bcp47.txt}. \last{April~27}} which are set automatically when they install their browser. If the client's browser does not send an {\tt Accept-Language} header\footnote{\href{https://tools.ietf.org/html/rfc7231\#section-5.3.5}{https://tools.ietf.org/html/rfc7231\#section-5.3.5}. \last{April~27}} with this information in their requests to view a website, then the server may use the {\tt Navigator\-Language} object in JavaScript\footnote{\href{https://www.w3.org/TR/html51/webappapis.html\#language-preferences}{https://www.w3.org/TR/html51/webappapis.html\#language-preferences}. \last{April~27}} to query for the language of the browser user interface. However, the server can also ask the client's browser directly through the Geolocation API (for instance, on Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{April~27}}\footnote{\href{https://developer.mozilla.org/en-US/docs/Web/API/Geolocation/Using_geolocation}{https://developer.mozilla.org/en-US/docs/Web/API/Geolocation/Using\_geolocation}. \last{April~27}}) to supply the geolocation of users and extrapolate plausible languages for the client. Knowing where the user is likely to be, and what languages the user is likely to prefer using, could help with providing their native language automatically in the browser.
 
 \citet{gawne2016mapmaking} give a general overview of the mapping field currently, pointing out that the main resource for finding language geographical co\"ordinates comes from the World Language Mapping System (WLMS),\footnote{\href{http://www.worldgeodatasets.com/language/.}{http://www.worldgeodatasets.com/language/}. \last{April~25}} a website owned and run by SIL. The WLMS data is used to specify locations for ISO 639-3 labelling, and by Glottolog and OLAC. SIL's maps are under a closed license and must be purchased. \citet{gawne2016mapmaking} also mention WALS, which uses its own geographical co\"ordinates, and the ELP, which uses Google Maps as its mapping program,\footnote{Unsurprisingly, as the ELP is funded by Google.} and draws from multiple sources. They also mention Language Landscape,\footnote{\href{http://www.languagelandscape.org/}{http://www.languagelandscape.org}. \last{April~25}} a project which maps instances of language use.
 
 To use these geographic information systems (GIS), one needs to download licensed map data, which could be open or closed. Then, one has to have a mapping software to display that data. This software must also be appropriately licensed. Google Maps is not open source, although it is {\it open access}, in that it is free to use. An open source equivalent of Google Maps is Open Street Maps,\footnote{\href{https://www.openstreetmap.org/}{https://www.openstreetmap.org/}. \last{April~27}} a community built tool that is permissively licensed as CC-BY-SA.\footnote{\href{https://www.openstreetmap.org/copyright}{https://www.openstreetmap.org/copyright}. \last{April~27}} One could use data from Glottolog and then provide a map using Open Street Map while using entirely open source applications, or one could use Google Maps with the same end result. The only difference between the two methodologies from an open source perspective is that the engine making Google Maps would be still be a proprietary black box.
 
-It is this mixed use case that is most common - researchers or NLP practitioners use a mix of open and closed resources, as needed. \citet{gawne2016mapmaking} mention many programs: Google Earth\footnote{\href{https://www.google.com/earth/}{https://www.google.com/earth/}. \last{April~27}} (closed source, free) for base maps; Geotag\footnote{\href{http://geotag.sourceforge.net/}{http://geotag.sourceforge.net/}. \last{April~27}} (free, open source) and Photo KML\footnote{\href{http://www.visualtravelguide.com/Photo-kml.html}{http://www.visualtravelguide.com/Photo-kml.html}. This URL was provided in \citet{gawne2016mapmaking}, but may be down permanently.} (free) for accessing GIS embedded in pictures taken on iPhones (closed); the KML and KMZ formats,\footnote{\href{http://www.opengeospatial.org/standards/kml/}{http://www.opengeospatial.org/standards/kml/}. \last{April~27}} originally developed by Google for Google Earth but now standards implemented by the Open Geospatial Consortium\footnote{\href{http://www.opengeospatial.org}{http://www.opengeospatial.org}. \last{April~27}} and licensed openly and freely; Koredoko\footnote{\href{https://itunes.apple.com/us/app/koredoko-exif-and-gps-viewer/id286765236}{https://itunes.apple.com/us/app/koredoko-exif-and-gps-viewer/id286765236}. \last{April~27}} for viewing GIS data in photos (closed, free); CartoDB\footnote{\href{https://carto.com/}{https://carto.com/}. \last{April~27}} (proprietary) and CartoCSS\footnote{\href{https://github.com/mapbox/carto}{https://github.com/mapbox/carto}. \last{April~27}} (free, open); TileMill\footnote{\href{https://www.mapbox.com/tilemill/}{https://www.mapbox.com/tilemill/}. \last{April~27}} (free, open, but no longer maintained or updated) and MapBox\footnote{\href{https://www.mapbox.com/mapbox-studio/}{https://www.mapbox.com/mapbox-studio/}. \last{April~27}} (open, freemium\footnote{Meaning that certain features are free, while others require some sort of payment; a common way of funding open source projects.}) ; QGIS\footnote{\href{https://www.qgis.org/}{https://www.qgis.org/}. \last{April~27}} (free, open); the SQL\footnote{\href{https://www.iso.org/committee/45342/x/catalogue/p/1/u/0/w/0/d/0}{https://www.iso.org/committee/45342/x/catalogue/p/1/u/0/w/0/d/0}. \last{April~27}} language (free, open - languages and formats also have licensing laws and can be copyrighted\footnote{Constructed natural languages can also be licensed and copyrighted, leading to legal complications involving corporations suing fan communities for publishing documentation in a given language. Further discussion is well out of scope here, although the implications of language copyright do provide an interesting intellectual exercise.}); % TODO Write a novel on this
+It is this mixed use case that is most common - researchers or NLP practitioners use a mix of open and closed resources, as needed. \citet{gawne2016mapmaking} mention many programs: Google Earth\footnote{\href{https://www.google.com/earth/}{https://www.google.com/earth/}. \last{April~27}} (closed source, free) for base maps; Geotag\footnote{\href{http://geotag.sourceforge.net/}{http://geotag.sourceforge.net/}. \last{April~27}} (free, open source) and Photo KML\footnote{\href{http://www.visualtravelguide.com/Photo-kml.html}{http://www.visualtravelguide.com/Photo-kml.html}. This URL was provided in \citet{gawne2016mapmaking}, but may be down permanently.} (free) for accessing GIS embedded in pictures taken on iPhones (closed); the KML and KMZ formats,\footnote{\href{http://www.opengeospatial.org/standards/kml/}{http://www.opengeospatial.org/standards/kml/}. \last{April~27}} originally developed by Google for Google Earth but now standards implemented by the Open Geospatial Consortium\footnote{\href{http://www.opengeospatial.org}{http://www.opengeospatial.org}. \last{April~27}} and licensed openly and freely; Koredoko\footnote{\href{https://itunes.apple.com/us/app/koredoko-exif-and-gps-viewer/id286765236}{https://itunes.apple.com/us/app/koredoko-exif-and-gps-viewer/id286765236}. \last{April~27}} for viewing GIS data in photos (closed, free); CartoDB\footnote{\href{https://carto.com/}{https://carto.com/}. \last{April~27}} (proprietary) and CartoCSS\footnote{\href{https://github.com/mapbox/carto}{https://github.com/mapbox/carto}. \last{April~27}} (free, open); TileMill\footnote{\href{https://www.mapbox.com/tilemill/}{https://www.mapbox.com/tilemill/}. \last{April~27}} (free, open, but no longer maintained or updated) and MapBox\footnote{\href{https://www.mapbox.com/mapbox-studio/}{https://www.mapbox.com/mapbox-studio/}. \last{April~27}} (open, freemium\footnote{Meaning that certain features are free, while others require some sort of payment; a common way of funding open source projects.}) ; QGIS\footnote{\href{https://www.qgis.org/}{https://www.qgis.org/}. \last{April~27}} (free, open); the SQL\footnote{\href{https://www.iso.org/committee/45342/x/catalogue/p/1/u/0/w/0/d/0}{https://www.iso.org/committee/45342/x/catalogue/p/1/u/0/w/0/d/0}. \last{April~27}} language (free, open - languages and formats also have licensing laws and can be copyrighted\footnote{Constructed natural languages can also be licensed and copyrighted, leading to legal complications involving corporations suing fan communities for publishing documentation in a given language. Further discussion is well out of scope here, although the implications of language copyright do provide an interesting intellectual exercise.});
 JPEG\footnote{\href{https://www.iso.org/standard/54989.html}{https://www.iso.org/standard/54989.html}. \last{April~27}} and PNG\footnote{\href{https://www.iso.org/standard/29581.html}{https://www.iso.org/standard/29581.html}. \last{April~27}} image formats (free, open); Adobe PhotoShop\footnote{\href{https://www.adobe.com/products/photoshop.html}{https://www.adobe.com/products/photoshop.html}. \last{April~27}} (closed source, paid); and CartoHexa\footnote{\href{https://www.colorhexa.com/}{https://www.colorhexa.com/}. \last{April~27}} (free, closed), among others that I may have missed.
 
 It may be useful to look only at a specific part of the research methodology used in \citep{gawne2016mapmaking} in order to highlight more clearly what a mixed workflow looks like. One such example would be where they use a closed source application or website to shim (transfer from one format to another) open source data, as below:
@@ -42,7 +42,7 @@ Here, they used Google Earth, which is closed source, to deal with open sourced 
 
 Dogmatically using an entirely open source pipeline for working with language (or GIS data, as here) is rare, although it is hypothetically possible. However, one quickly runs into problems with this approach, as each subsequent layer of computational processing must then depend upon open source - including the operating system (for instance, GNU/Linux as an open source alternative to the closed Mac OS), processor, silicon chips, and so on. Or consider that GIS data often depends upon GPS co\"{o}rdinates. The Global Positioning System is run by the US Air Force, and owned by the US Government, and the systems which run it are almost certainly closed source for security reasons. At what level, then, can a workflow be judged to be open source or not?
 
-By using {\it reductio ad absurdum}, it is easy to see that using both open source and closed source tools is more manageable. This is one of the reasons that copyleft remains an issue in licensing, as it enforces open source for all subsequent code, forcing one particular methodology at the expense of ease of use. However, open source tools have a certain flexibility for usage, in that they can be modified, shared, reused, and integrated more easily than so-called `black box' programs which don't proffer up information on how they work. 
+By using {\it reductio ad absurdum}, it is easy to see that using both open source and closed source tools is more manageable. This is one of the reasons that copyleft remains an issue in licensing, as it enforces open source for all subsequent code, forcing one particular methodology at the expense of ease of use. However, open source tools have a certain flexibility for usage, in that they can be modified, shared, reused, and integrated more easily than so-called `black box' programs which do not proffer up information on how they work. 
 
 \citepos{gawne2016mapmaking} suggestions for mapping use many closed, black-box applications. However, different studies show how to achieve similar results using entirely open source tools on the web. As \citet{hu2012multimedia, hu2018web} notes, the general trend in mapping software has been away from native applications\footnote{`Native' here means built for an operating system; not indigenous as in language communities.} and towards web applications, which may have a steeper learning curve, but which afford remote storage and access, and user access over the Internet. WALS uses LeafletJS,\footnote{\href{https://leafletjs.com/}{https://leafletjs.com/}. \last{April~26}} an open source mapping software that uses Open Street Maps as an alternative to using an embedded Google Maps map using their API. \citet{hu2018web} suggests a workflow that uses Leaflet along with jQuery,\footnote{\href{https://jquery.com/}{https://jquery.com/}. \last{April~26}} an open source JavaScript utility library, to display GIS linguistic maps. Web applications can also be used to display geographical data for research; \citet{littauer2013linguistic}, for instance, explored using a SPARQL endpoint to mine RDF data, including geographic location from WALS, to map Dogon languages using Open Street Maps. Here, we see that open source tools do exist for the use case of making dialect maps for language co\"ordinates. 
 
@@ -97,7 +97,7 @@ Linghub and the Linguistics Linked Data cloud were both created to resolve this 
 
 Linghub \citep{mccrae2015linghub, mccrae2015reconciling} was created to allow for mining of all available databases - including META-SHARE, LRE Map, Datahub, and CLARIN's VLO - using SPARQL, a query language that works for Semantic Web ontologies encoded in RDF. Since \citet{mccrae2015linghub} was published, OLAC has allowed its resources to also be mined.\footnote{\href{http://www.language-archives.org/news.html\#llod}{http://www.language-archives.org/news.html\#llod}. \last{April~26}} At this point, there are few large repositories of language resource data which are unable to be queried. However, linked data has the existential failing of only including metadata which has been included in the available data sources. It is a fantastic resource for finding corpora, and \citet{mccrae2015linghub} gives several examples of finding data through the cloud;  it is also an exceptional way to mine the LRE map database, which provides names of language resources for NLP tooling. But there is a barrier to entry of learning SPARQL and using an available portal, and any work outside of the curated, largely academic resources may not be available.
 
-The linked open data cloud and Linghub also do not explicitly cater to LRLs, although there has been some work in this area. \citet{huang2017linking} used basic lexicons, such as the Swadesh list \citep{swadesh1955towards} of common words used in lexically dating languages, to automatically develop ontologies of cultural knowledge for LRLs. While this doesn't provide better coverage of language resources, ontologies can be useful themselves for translation and searching lexicons. A more detailed use case for automatically linking LRLs could be attempted, for instance by scraping the internet for pages that use the language (similar to An Cr\'{u}bad\'{a}n) and automatically adding those to the LOD. More work in this area is needed.
+The linked open data cloud and Linghub also do not explicitly cater to LRLs, although there has been some work in this area. \citet{huang2017linking} used basic lexicons, such as the Swadesh list \citep{swadesh1955towards} of common words used in lexically dating languages, to automatically develop ontologies of cultural knowledge for LRLs. While this does not provide better coverage of language resources, ontologies can be useful themselves for translation and searching lexicons. A more detailed use case for automatically linking LRLs could be attempted, for instance by scraping the internet for pages that use the language (similar to An Cr\'{u}bad\'{a}n) and automatically adding those to the LOD. More work in this area is needed.
 
 \subsection{Multilingual NLP libraries}
 \label{subsec:popular-open-source-libraries}
@@ -163,7 +163,7 @@ There is ongoing work to do curating the list, gathering sources, and improving 
 
 In five different strategies, I have discussed above how researchers can ascertain the amount of available, open source LRs. The first case study in Section~\ref{subsec:mapping}, using a specific example, highlighted how using open source methodologies alone is not always the most efficient way to accomplish a HLT task, although it is certainly possible for small, scoped tasks. For research, using a specific open source tool available from a paper is often possible, as more and more researchers are releasing their code publicly. For development in the browser-based technology, it is also often easy, as more and more of the internet's code is being released publicly. However, for application-based workflows, one often needs to depend upon closed source data. And, across the board, it is difficult to find FLOSS LRs for LRLS. 
 
-Finding open source resources through language resource providers is also difficult, as was clear from Section~\ref{subsec:lrl-nlp-through-providers}. many aggregators simply don't cater to code resources, instead acting as bibliographies or pointers to academic publications or typological datasets. When computational LRs are mentioned, they're often tangential, for specific tasks, or behind paywalls. Linked Open Data, mentioned in Section~\ref{subsec:lod}, also isn't a panacea for this problem, as it generally collates from the other aggregators, anyway. Projection across languages or multilingual libraries do exist, as shown in Section~\ref{subsec:resource-aggregators}, but they require a high amount of work upfront by developers, and aren't readily available or searchable anywhere. 
+Finding open source resources through language resource providers is also difficult, as was clear from Section~\ref{subsec:lrl-nlp-through-providers}. many aggregators simply do not cater to code resources, instead acting as bibliographies or pointers to academic publications or typological datasets. When computational LRs are mentioned, they're often tangential, for specific tasks, or behind paywalls. Linked Open Data, mentioned in Section~\ref{subsec:lod}, also is not a panacea for this problem, as it generally collates from the other aggregators, anyway. Projection across languages or multilingual libraries do exist, as shown in Section~\ref{subsec:resource-aggregators}, but they require a high amount of work upfront by developers, and are not readily available or searchable anywhere. 
 
 I presented a database that solves these problems in Section~\ref{subsec:popular-open-source-libraries}. This database explicitly caters exclusively to open source code resources for LRLS, and uses a crowd-sourced, collaborative and curated aggregation method to allow anyone to submit possible links. As of today, it may be the best resource for finding LRL resources. There is always more work to do, but for now this is a significant contribution to the field.  
 
